[tool.poetry]
name = "wslm"
version = "0.1.0"
description = ""
authors = ["IT小强xqitw.cn <mail@xqitw.cn>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "tencent"
default = true
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[tool.poetry.scripts]
wslm = "wslm.wslm:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
